MODON MRE BPDEV/force-app/main/default/objects/CommissionMemoRefNp__c/CommissionMemoRefNp__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CommissionMemo RefNp</label>
</CustomObject>