MODON MRE BPDEV/force-app/main/default/objects/CommissionMemoRefNp__c/fields/LastMemoGeneratedNumber__c.field-meta.xml
<CustomField>
    <fullName>LastMemoGeneratedNumber__c</fullName>
    <label>LastMemoGeneratedNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>