MODON MRE BPDEV/force-app/main/default/objects/CommissionMemoRefNp__c/fields/Memo_From__c.field-meta.xml
<CustomField>
    <fullName>Memo_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Memo From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>