MODON MRE BPDEV/force-app/main/default/objects/CommissionMemoRefNp__c/fields/Memo_To__c.field-meta.xml
<CustomField>
    <fullName>Memo_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Memo To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>