MODON MRE BPDEV/force-app/main/default/objects/CommissionMemoRefNp__c/fields/MemoRefPrefix__c.field-meta.xml
<CustomField>
    <fullName>MemoRefPrefix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MemoRefPrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>